Adding more tests + bug fixes