@@ -18,8 +18,10 @@ import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.stream.StreamResult;
 import java.io.ByteArrayInputStream;
 import java.io.StringWriter;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
@@ -287,9 +289,9 @@ class QueueDescriptionUtil {
 
     private static String normalizeForwardToAddress(String forwardTo, URI baseAddress) {
         try {
-            URI url = new URI(forwardTo);
+            URL url = new URL(forwardTo);
             return forwardTo;
-        } catch (URISyntaxException e) {
+        } catch (MalformedURLException e) {
             return baseAddress.resolve(forwardTo).toString();
         }
     }
